# comp0034-cw-2025

./: .gitignore  README.md  pyproject.toml  submission.yml
data/: annual_car_population_by_cc_clean.csv  annual_car_population_by_make_clean.csv  car_population_by_cc_rating_end_clean.csv
src/: app.py
src/fleet_mix_app/: __init__.py  analytics.py  data_access.py  routes.py
src/fleet_mix_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fleet_mix_app/templates/: base.html  comparison.html  index.html  manufacturers.html
tests/: conftest.py  test_analytics.py  test_basic_app.py  test_browser.py  test_routes.py
